force-app/main/default/objects/Program_Review_Type__c/Program_Review_Type__c.object-meta.xml
<CustomObject>
    <label>Reference Data</label>
    <nameField>
        <label>Review Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>