force-app/main/default/objects/Program_Review_Type__c/fields/Effective_Date_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_From__c</fullName>
    <label>Effective Date From</label>
    <type>Date</type>
</CustomField>