force-app/main/default/objects/Program_Review_Type__c/fields/Effective_Date_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_To__c</fullName>
    <label>Effective Date To</label>
    <type>Date</type>
</CustomField>