force-app/main/default/objects/Program_Review_Type__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Review_Types</relationshipName>
    <type>Lookup</type>
</CustomField>