force-app/main/default/objects/Program_Review_Type__c/fields/SDoc_Template__c.field-meta.xml
<CustomField>
    <fullName>SDoc_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template ID</label>
    <referenceTo>SDOC__SDTemplate__c</referenceTo>
    <relationshipLabel>Reference Data</relationshipLabel>
    <relationshipName>Reference_Data</relationshipName>
    <type>Lookup</type>
</CustomField>