force-app/main/default/objects/Program_Review_Type__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dismissal Letter</fullName>
            </value>
            <value>
                <fullName>Decision Letter</fullName>
            </value>
            <value>
                <fullName>Review Letter</fullName>
            </value>
            <value>
                <fullName>Acknowledgement Letter</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Notice Letter</fullName>
            </value>
            <value>
                <fullName>Decision Letter Sample</fullName>
            </value>
            <value>
                <fullName>MD Decision Letter Sample</fullName>
            </value>
            <value>
                <fullName>MA ACO RBPO Decision Letter</fullName>
            </value>
            <value>
                <fullName>MA Infertility Decision Letter</fullName>
            </value>
            <value>
                <fullName>MA Experimental Decision Letter</fullName>
            </value>
            <value>
                <fullName>MA Medical Necessity Decision Letter</fullName>
            </value>
            <value>
                <fullName>MA Continuation of Coverage Decision Letter</fullName>
            </value>
            <value>
                <fullName>MA ACO RBPO Review Form</fullName>
            </value>
            <value>
                <fullName>MA Experimental Review Form</fullName>
            </value>
            <value>
                <fullName>MA Infertility Review Form</fullName>
            </value>
            <value>
                <fullName>MA Medical Necessity Review Form</fullName>
            </value>
            <value>
                <fullName>MA Continuation of Coverage Review Form</fullName>
            </value>
            <value>
                <fullName>MA ACO RBPO Decision Letter Sample</fullName>
            </value>
            <value>
                <fullName>MA Medical Necessity Decision Letter Sample</fullName>
            </value>
            <value>
                <fullName>MA Infertility Decision Letter Sample</fullName>
            </value>
            <value>
                <fullName>MA Experimental Decision Letter Sample</fullName>
            </value>
            <value>
                <fullName>MA Continuation of Coverage Decision Letter Sample</fullName>
            </value>
            <value>
                <fullName>RI Decision Letter</fullName>
            </value>
            <value>
                <fullName>RI Decision Letter Sample</fullName>
            </value>
            <value>
                <fullName>RI Review Form</fullName>
            </value>
            <value>
                <fullName>PA DOH Expert Review Form</fullName>
                <label>PA  DOH Expert Review Form</label>
            </value>
            <value>
                <fullName>PA DOH Decision Letter - MD Template</fullName>
            </value>
            <value>
                <fullName>PA DOH Decision Letter Sample</fullName>
            </value>
            <value>
                <fullName>PA DOH Expert Review Form - MD Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>