force-app/main/default/objects/Program_Review_Type__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Review Type</fullName>
            </value>
            <value>
                <fullName>Appeal Category</fullName>
            </value>
            <value>
                <fullName>Appeal Type</fullName>
            </value>
            <value>
                <fullName>Current Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>