force-app/main/default/objects/Program_Review_Type__c/recordTypes/Acct_ID.recordType-meta.xml
<RecordType>
    <fullName>Acct_ID</fullName>
    <active>true</active>
    <label>Acct ID</label>
</RecordType>