force-app/main/default/objects/Program_Review_Type__c/recordTypes/Appeal_Category.recordType-meta.xml
<RecordType>
    <fullName>Appeal_Category</fullName>
    <active>true</active>
    <label>Services</label>
</RecordType>