force-app/main/default/objects/Program_Review_Type__c/recordTypes/Appeal_Type.recordType-meta.xml
<RecordType>
    <fullName>Appeal_Type</fullName>
    <active>true</active>
    <label>Coverage Type</label>
</RecordType>