force-app/main/default/objects/Program_Review_Type__c/recordTypes/Contract_Number.recordType-meta.xml
<RecordType>
    <fullName>Contract_Number</fullName>
    <active>true</active>
    <label>Contract Number</label>
</RecordType>