force-app/main/default/objects/Program_Review_Type__c/recordTypes/Document_Template.recordType-meta.xml
<RecordType>
    <fullName>Document_Template</fullName>
    <active>true</active>
    <label>Document Template</label>
</RecordType>