force-app/main/default/objects/Program_Review_Type__c/recordTypes/Invoice_Number.recordType-meta.xml
<RecordType>
    <fullName>Invoice_Number</fullName>
    <active>false</active>
    <label>Invoice Number</label>
</RecordType>