force-app/main/default/objects/Program_Review_Type__c/recordTypes/Org_ID.recordType-meta.xml
<RecordType>
    <fullName>Org_ID</fullName>
    <active>true</active>
    <label>Org ID</label>
</RecordType>