force-app/main/default/objects/Program_Review_Type__c/recordTypes/Procedures.recordType-meta.xml
<RecordType>
    <fullName>Procedures</fullName>
    <active>true</active>
    <label>Procedures</label>
</RecordType>