force-app/main/default/objects/Program_Review_Type__c/recordTypes/Project_ID.recordType-meta.xml
<RecordType>
    <fullName>Project_ID</fullName>
    <active>true</active>
    <label>Project ID</label>
</RecordType>