force-app/main/default/objects/Program_Review_Type__c/recordTypes/Review_Type.recordType-meta.xml
<RecordType>
    <fullName>Review_Type</fullName>
    <active>true</active>
    <label>Review Type</label>
</RecordType>