force-app/main/default/objects/Program_Review_Type__c/validationRules/EffectiveFromGreaterThanTo.validationRule-meta.xml
<ValidationRule>
    <fullName>EffectiveFromGreaterThanTo</fullName>
    <active>true</active>
    <errorConditionFormula>Effective_Date_From__c  &gt;  Effective_Date_To__c</errorConditionFormula>
    <errorDisplayField>Effective_Date_From__c</errorDisplayField>
    <errorMessage>Effective Date from should be less than Effective Date To</errorMessage>
</ValidationRule>